fix font size on mobile view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,15 +98,15 @@ body {
   }
 
   .content-rrp {
-    font-size: 16px;
+    font-size: 14px;
   }
 
   .content-name {
-    font-size: 22px;
+    font-size: 20px;
   }
 
   .content-default {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .header .img {
